支持自定义快捷键，快捷键消息会被键盘钩子获取并拦截，不会发送到目的窗口

--- a/Fucking Exam/imgui.ini
+++ b/Fucking Exam/imgui.ini
@@ -13,3 +13,18 @@ Pos=0,0
 Size=496,473
 Collapsed=0
 
+[Window][错误]
+Pos=3,3
+Size=300,150
+Collapsed=0
+
+[Window][Dear ImGui Demo]
+Pos=57,203
+Size=550,621
+Collapsed=0
+
+[Window][Horizontal contents size demo window]
+Pos=60,60
+Size=341,418
+Collapsed=0
+
