1. 隐藏任务栏窗口图标 2. 快捷键显示FE窗口时不会使原来的窗口失去焦点 3. 添加程序图标和窗口图标 4. 添加托盘图标和菜单 5. @区块渲染方式改为\n标题\n 6. 一次只能开启一个Fucking Exam实例 7. 禁止最小化 8. 左alt+方向上下键控制窗口透明度 9. 更新UI

--- a/Fucking Exam/Fucking Exam.vcxproj
+++ b/Fucking Exam/Fucking Exam.vcxproj
@@ -168,6 +168,12 @@
     <ClCompile Include="UTFStringAffair.cpp" />
     <ClCompile Include="wWinMainWithImgui.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Resource.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\Resource\Icon\Aerith.ico" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
