--- a/Fucking Exam/imgui.ini
+++ b/Fucking Exam/imgui.ini
@@ -10,7 +10,7 @@ Collapsed=0
 
 [Window][MainWnd]
 Pos=0,0
-Size=496,473
+Size=958,1000
 Collapsed=0
 
 [Window][错误]
@@ -19,12 +19,17 @@ Size=300,150
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=101,55
-Size=949,722
+Pos=70,60
+Size=946,722
 Collapsed=0
 
 [Window][Horizontal contents size demo window]
 Pos=60,60
 Size=341,418
+Collapsed=0
+
+[Window][##ConfigWnd]
+Pos=0,0
+Size=944,501
 Collapsed=0
 
